--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>concurrent</module>
         <module>datastructure</module>
         <module>leetcode</module>
+        <module>springboot-study</module>
         <module>grpc-test</module>
     </modules>
     <packaging>pom</packaging>
@@ -18,12 +19,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
+        <version>2.3.3.RELEASE</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
         </dependency>
     </dependencies>
     <!--<repositories>
