--- a/grpc-test/pom.xml
+++ b/grpc-test/pom.xml
@@ -20,7 +20,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.hualala.mendianbao</groupId>
             <artifactId>mendianbao-shopdocument-interface</artifactId>
             <version>1.1.0-SNAPSHOT</version>
@@ -30,7 +30,7 @@
                     <groupId>com.google.api.grpc</groupId>
                 </exclusion>
             </exclusions>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
