--- a/springboot-study/pom.xml
+++ b/springboot-study/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>lettuce-core</artifactId>
             <version>5.3.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
