--- a/grpc-test/pom.xml
+++ b/grpc-test/pom.xml
@@ -38,7 +38,7 @@
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
-            <artifactId>grpc-com.ggx.study.springboot.netty-shaded</artifactId>
+            <artifactId>grpc-netty-shaded</artifactId>
             <version>1.28.1</version>
         </dependency>
         <dependency>
