--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>leetcode</module>
         <module>springboot-study</module>
         <module>grpc-test</module>
+        <module>middleware-study</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -27,8 +28,9 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
         </dependency>
     </dependencies>
     <!--<repositories>
