--- a/middleware-study/src/main/resources/application.yml
+++ b/middleware-study/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
         acknowledge-mode: manual
         prefetch: 8
         concurrency: 2
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
